architecture-ide/tests/fixtures/negative/C6_no_actions.concept
concept Pointless

  purpose
    do nothing

  operational principle
    after inc [ ] => [ total: 1 ]
